# callm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  pytest.ini
.github/: release.yml
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/anthropic/: messages.py  messages_structured.py
examples/classification/: content_moderation.py  sentiment_analysis.py
examples/cohere/: embeddings.py
examples/data_extraction/: product_info_extraction.py
examples/deepseek/: chat_completions.py  chat_completions_structured.py  chat_completions_structured_in_memory.py
examples/embeddings/: document_embeddings.py  semantic_search_prep.py
examples/evaluation/: multi_judge_consensus.py
examples/gemini/: embeddings.py  generate_content.py  generate_content_in_memory.py  generate_content_structured.py
examples/openai/: chat_completions_structured.py  chat_completions_structured_in_memory.py  embeddings.py  responses.py  responses_in_memory.py  responses_structured.py
examples/providers/: README.md
examples/providers/anthropic/: messages.py
examples/providers/cohere/: embeddings.py
examples/providers/deepseek/: chat_completions.py
examples/quickstart/: minimal.py
examples/synthetic_data/: distillation_intent_classification.py  search_evaluation_queries.py
examples/translation/: nanobeir_translation.py
examples/voyageai/: embeddings.py
src/callm/: __init__.py  core.py  modules.py  utils.py
tests/: test_import.py  test_rate_limit.py  test_retry.py  test_tokenizers.py  test_utils.py
(+25 files in other folders)
