[project]
name = "callm"
version = "0.1.0"
description = "Calmly call LLMs in parallel, within rate limits."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.3.0",
]

[project.scripts]
callm = "callm:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
